--- a/app/views/redirects/index.html.erb
+++ b/app/views/redirects/index.html.erb
@@ -1,30 +1,28 @@
 
-<h1>Redirects </h1>
-<div class="pull-right">
-		<%= link_to "New Redirect", {controller: "redirects", action: "new"}, class: "btn btn-primary" %>
-</div>
-</br>
-<div>
-	<table class='table'>
-		<thead>
-			<td>Domain</td>
-			<td>Url</td>
-			<td></td>
-		</thead>
-		<tbody>
-			<% @redirects.each do |redirect| %>
-				<tr>
-					<td>
+<div class="container">
+	<h1>Redirects </h1>
+	<div class="pull-right">
+			<%= link_to "New Redirect", {controller: "redirects", action: "new"}, class: "btn btn-primary" %>
+	</div>
+	</br>
+	<div>
+		<% @redirects.each do |redirect| %>
+			<div class="border-bottom">
+				<div class="row">
+					<div class="col-lg-3 col-md-3 col-xs-12 col-sm-3 text-truncate">
 						<%= redirect.domain %>
-					</td>
-					<td>
+					</div>
+					<div class="col-lg-7 col-md-7 col-xs-12 col-sm-6 text-truncate">
 						<%= redirect.url %>
-					</td>
-					<td>
-						<%= button_to "Delete", redirect_path(redirect), method: :delete, data: { confirm: "Are you sure?" } , class: "btn btn-danger" %>
-					</td>
-				</tr>
-			<% end %>
-		</tbody>
-	</table>
+					</div>
+					<div class="col-lg-2 col-md-2 col-xs-12 col-sm-3">			
+					<%= button_to "Delete", redirect_path(redirect), method: :delete, data: { confirm: "Are you sure?" } , class: "btn-xs btn-danger btn-block" %>
+					</div>
+				</div>
+			</div>
+		<% end %>
+	</div>
+	<div class="d-flex flex-column justify-content-between">
+		<%= will_paginate @redirects, :previous_label => "Previous", :next_label => "Next" %>
+	</div>
 </div>
